compile QtAv under MXE with CMake now

--- a/project/bundles/3rdparty/ext_qtav/CMakeLists.txt
+++ b/project/bundles/3rdparty/ext_qtav/CMakeLists.txt
@@ -7,8 +7,15 @@
 #
 
 set(PREFIX_ext_qtav "${EXTPREFIX}")
-set(QTAV_VERSION v1.13.0)
-#set(QTAV_VERSION master)
+
+set(QtAV_Conf -DBUILD_EXAMPLES=OFF
+              -DBUILD_PLAYERS=OFF
+              -DBUILD_TESTS=OFF
+              -DBUILD_QT5OPENGL=ON
+              -DBUILD_QML=OFF
+)
+
+JoinListAsString("${QtAV_Conf}" " " BASH_OPTIONS)
 
 if(MINGW)
 
@@ -23,7 +30,6 @@ if(MINGW)
         DOWNLOAD_DIR ${EXTERNALS_DOWNLOAD_DIR}
 
         GIT_REPOSITORY https://github.com/wang-bin/QtAV.git
-#        GIT_TAG ${QTAV_VERSION}
 
         CONFIGURE_COMMAND git submodule update --init &&
                           rm -rfv ${MXE_INSTALL_PREFIX}/qt5/include/QtAV &&
@@ -32,16 +38,18 @@ if(MINGW)
                           rm -fv  ${MXE_INSTALL_PREFIX}/qt5/lib/libQtAVWidgets1.a &&
                           rm -fv  ${MXE_INSTALL_PREFIX}/qt5/bin/QtAV1.dll &&
                           rm -fv  ${MXE_INSTALL_PREFIX}/qt5/bin/QtAVWidgets1.dll &&
-                          mkdir build && cd build && ${MXE_INSTALL_PREFIX}/qt5/bin/qmake CONFIG+=no_examples ..
+                          cp ${CMAKE_CURRENT_SOURCE_DIR}/../../../../bootstrap.mxe <SOURCE_DIR>/. &&
+                          <SOURCE_DIR>/bootstrap.mxe ${MXE_BUILDROOT} RelWithDebInfo ${BASH_OPTIONS}
 
-        BUILD_COMMAND cd build && $(MAKE)
+
+        BUILD_COMMAND cd <SOURCE_DIR>/build.mxe && $(MAKE)
 
         INSTALL_COMMAND cp -rfv <SOURCE_DIR>/src/QtAV ${MXE_INSTALL_PREFIX}/qt5/include/ &&
                         cp -rfv <SOURCE_DIR>/widgets/QtAVWidgets ${MXE_INSTALL_PREFIX}/qt5/include/ &&
-                        cp -fv  <SOURCE_DIR>/build/${LIB_DIR}/libQtAV1.a ${MXE_INSTALL_PREFIX}/qt5/lib/ &&
-                        cp -fv  <SOURCE_DIR>/build/${LIB_DIR}/libQtAVWidgets1.a ${MXE_INSTALL_PREFIX}/qt5/lib/ &&
-                        cp -fv  <SOURCE_DIR>/build/${LIB_DIR}/QtAV1.dll ${MXE_INSTALL_PREFIX}/qt5/bin/ &&
-                        cp -fv  <SOURCE_DIR>/build/${LIB_DIR}/QtAVWidgets1.dll ${MXE_INSTALL_PREFIX}/qt5/bin/
+                        cp -fv  <SOURCE_DIR>/build.mxe/${LIB_DIR}/libQtAV1.a ${MXE_INSTALL_PREFIX}/qt5/lib/ &&
+                        cp -fv  <SOURCE_DIR>/build.mxe/${LIB_DIR}/libQtAVWidgets1.a ${MXE_INSTALL_PREFIX}/qt5/lib/ &&
+                        cp -fv  <SOURCE_DIR>/build.mxe/${LIB_DIR}/QtAV1.dll ${MXE_INSTALL_PREFIX}/qt5/bin/ &&
+                        cp -fv  <SOURCE_DIR>/build.mxe/${LIB_DIR}/QtAVWidgets1.dll ${MXE_INSTALL_PREFIX}/qt5/bin/
 
         BUILD_IN_SOURCE 1
 
@@ -59,7 +67,6 @@ elseif(APPLE)
         DOWNLOAD_DIR ${EXTERNALS_DOWNLOAD_DIR}
 
         GIT_REPOSITORY https://github.com/wang-bin/QtAV.git
-#        GIT_TAG ${QTAV_VERSION}
 
         PATCH_COMMAND ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_BINARY_DIR}/qtav-rules-macos.patch
 
@@ -95,7 +102,6 @@ else() #Linux
         DOWNLOAD_DIR ${EXTERNALS_DOWNLOAD_DIR}
 
         GIT_REPOSITORY https://github.com/wang-bin/QtAV.git
-#        GIT_TAG ${QTAV_VERSION}
 
         CONFIGURE_COMMAND cd <SOURCE_DIR> && git submodule update --init &&
                           rm -rfv ${INSTALL_ROOT}/include/QtAV &&
