--- a/project/bundles/3rdparty/ext_qtav/qtav-rules-macos.patch.cmake.in
+++ b/project/bundles/3rdparty/ext_qtav/qtav-rules-macos.patch.cmake.in
@@ -14,3 +14,44 @@ index ef57faf6..91948294 100644
 +INCLUDEPATH += @INSTALL_ROOT@/include/
 +LIBS += -L@INSTALL_ROOT@/lib/
 +
+diff --git a/QtAV.pro b/QtAV.pro
+index a463edd0..8c4f6014 100644
+--- a/QtAV.pro
++++ b/QtAV.pro
+@@ -2,7 +2,7 @@ include(root.pri)
+ 
+ TEMPLATE = subdirs
+ CONFIG -= ordered
+-SUBDIRS = libqtav tools
++SUBDIRS = libqtav
+ libqtav.file = src/libQtAV.pro
+ !no-widgets {
+   SUBDIRS += libqtavwidgets
+@@ -12,11 +12,11 @@ libqtav.file = src/libQtAV.pro
+ }
+ isEqual(QT_MAJOR_VERSION, 5) {
+   # qtHaveModule does not exist in Qt5.0
+-  isEqual(QT_MINOR_VERSION, 0)|qtHaveModule(quick) {
+-    SUBDIRS += libqmlav
+-    libqmlav.file = qml/libQmlAV.pro
+-    libqmlav.depends += libqtav
+-    examples.depends += libqmlav
++#  isEqual(QT_MINOR_VERSION, 0)|qtHaveModule(quick) {
++#    SUBDIRS += libqmlav
++#    libqmlav.file = qml/libQmlAV.pro
++#    libqmlav.depends += libqtav
++#    examples.depends += libqmlav
+   }
+ }
+ !no-examples {
+@@ -24,8 +24,8 @@ isEqual(QT_MAJOR_VERSION, 5) {
+   examples.depends += libqtav
+ }
+ !cross_compile:!no-tests {
+-  SUBDIRS += tests
+-  tests.depends += libqtav libqtavwidgets
++#  SUBDIRS += tests
++#  tests.depends += libqtav libqtavwidgets
+ }
+ OTHER_FILES += README.md TODO.txt Changelog
+ OTHER_FILES += templates/vo.h templates/vo.cpp templates/COPYRIGHT.h templates/mkclass.sh
