Smae than MXE, use breeze-icons KF5 comonent to compile RCC container for MacOS bundle CCBUGS: 448172

--- a/project/bundles/3rdparty/ext_kf5_frameworks/CMakeLists.txt
+++ b/project/bundles/3rdparty/ext_kf5_frameworks/CMakeLists.txt
@@ -192,9 +192,15 @@ else()
     set(KCalendarCorePatch kcalendarcore-libical.patch)
 endif()
 
+if(MINGW)
+    set(BreezeIconsOptions -DBINARY_ICONS_RESOURCE=OFF)
+else()
+    set(BreezeIconsOptions -DBINARY_ICONS_RESOURCE=ON)
+endif()
+
 InstallKF5Component(extra-cmake-modules ${KF5_VERSION} ""                                                                   "")
 InstallKF5Component(kconfig             ${KF5_VERSION} ""                                                                   "")
-InstallKF5Component(breeze-icons        ${KF5_VERSION} "-DBINARY_ICONS_RESOURCE=OFF"                                        "breeze-icons-drop-svg.patch")
+InstallKF5Component(breeze-icons        ${KF5_VERSION} "${BreezeIconsOptions}"                                              "breeze-icons-drop-svg.patch")
 InstallKF5Component(solid               ${KF5_VERSION} ""                                                                   "")
 InstallKF5Component(kcoreaddons         ${KF5_VERSION} ""                                                                   "")
 InstallKF5Component(threadweaver        ${KF5_VERSION} ""                                                                   "${MacosThreadWeaverPatch}")
