--- a/project/bundles/3rdparty/ext_kf5_frameworks/CMakeLists.txt
+++ b/project/bundles/3rdparty/ext_kf5_frameworks/CMakeLists.txt
@@ -200,7 +200,7 @@ endif()
 
 InstallKF5Component(extra-cmake-modules ${KF5_VERSION} ""                                                                   "")
 InstallKF5Component(kconfig             ${KF5_VERSION} ""                                                                   "")
-InstallKF5Component(breeze-icons        ${KF5_VERSION} "${BreezeIconsOptions}"                                              "breeze-icons-drop-svg.patch")
+InstallKF5Component(breeze-icons        ${KF5_VERSION} "${BreezeIconsOptions}"                                              "breeze-dropsvg-rccprefix.patch")
 InstallKF5Component(solid               ${KF5_VERSION} ""                                                                   "")
 InstallKF5Component(kcoreaddons         ${KF5_VERSION} ""                                                                   "")
 InstallKF5Component(threadweaver        ${KF5_VERSION} ""                                                                   "${MacosThreadWeaverPatch}")
