Apply patch from Jaroslav Škarvada to enable libgphoto2 under Windows with MXE build. CCMAIL: jskarvad@redhat.com CCBUGS: 398166

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -370,32 +370,30 @@ endif()
 
 # -- libgphoto2 rules ----------------------------------------------------------
 
-if(NOT WIN32)
+# -- libgphoto2 rules ----------------------------------------------------------
 
-    find_package(Gphoto2)
+find_package(Gphoto2)
 
-    if(Gphoto2_FOUND)
+if(Gphoto2_FOUND)
 
-        if("${GPHOTO2_VERSION_STRING}" VERSION_GREATER "2.4.0")
-            set(VERSION_GPHOTO2 true)
-        else()
-            set(VERSION_GPHOTO2 false)
-        endif()
+    if("${GPHOTO2_VERSION_STRING}" VERSION_GREATER "2.4.0")
+        set(VERSION_GPHOTO2 true)
+    else()
+        set(VERSION_GPHOTO2 false)
+    endif()
 
-        if("${GPHOTO2_VERSION_STRING}" VERSION_GREATER "2.5.0")
-            set(VERSION_GPHOTO25 true)
-            message(STATUS "libgphoto2 API version >= 2.5")
-        else()
-            set(VERSION_GPHOTO25 false)
-            message(STATUS "libgphoto2 API version < 2.5")
-        endif()
+    if("${GPHOTO2_VERSION_STRING}" VERSION_GREATER "2.5.0")
+        set(VERSION_GPHOTO25 true)
+        message(STATUS "libgphoto2 API version >= 2.5")
+    else()
+        set(VERSION_GPHOTO25 false)
+        message(STATUS "libgphoto2 API version < 2.5")
+    endif()
 
-        if(VERSION_GPHOTO25)
-            set(HAVE_GPHOTO25 1)
-        else()
-            set(HAVE_GPHOTO25 0)
-        endif()
-
+    if(VERSION_GPHOTO25)
+        set(HAVE_GPHOTO25 1)
+    else()
+        set(HAVE_GPHOTO25 0)
     endif()
 
 endif()
