Fix cmake handling of git local repository by using a temporary tarball including all files

--- a/project/bundles/3rdparty/ext_qt/5.15-LTS/CMakeLists.txt
+++ b/project/bundles/3rdparty/ext_qt/5.15-LTS/CMakeLists.txt
@@ -22,8 +22,7 @@ execute_process(COMMAND
 
 ExternalProject_Add(ext_qt
 
-    DOWNLOAD_DIR ${EXTERNALS_DOWNLOAD_DIR}
-    URL file://${EXTERNALS_DOWNLOAD_DIR}/kde-5.15-LTS
+    URL file://${EXTERNALS_DOWNLOAD_DIR}/kde-5.15-LTS.tar
 
     PATCH_COMMAND ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/qt-appimage-support.patch
                && ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/qt-appimage-openssl-linked.patch
