--- a/core/utilities/geolocation/geoiface/CMakeLists.txt
+++ b/core/utilities/geolocation/geoiface/CMakeLists.txt
@@ -95,7 +95,7 @@ if(ENABLE_QWEBENGINE)
 else()
     set(libgeoiface_SRCS
         ${libgeoiface_SRCS}
-        ${CMAKE_CURRENT_SOURCE_DIR}/widgets/htmlwidget.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/widgets/htmlwidget_qwebkit.cpp
        )
 endif()
 
