update list of Qt6.3 sub-modules to drop CCBUGS: 261634

--- a/project/bundles/3rdparty/ext_qt/6.3/CMakeLists.txt
+++ b/project/bundles/3rdparty/ext_qt/6.3/CMakeLists.txt
@@ -58,39 +58,42 @@ ExternalProject_Add(ext_qt
                   -xcb
                   -skip qt3d                        # 3D core
                   -skip qtactiveqt                  # No need ActiveX support
-                  -skip qtandroidextras             # For embedded devices only
+                  -skip qtcanvas3d                  # New to Qt6
                   -skip qtcharts                    # No need data models charts support
+                  -skip qtcoap                      # New to Qt6
                   -skip qtconnectivity              # For embedded devices only
                   -skip qtdatavis3d                 # no need 3D data visualizations support
                   -skip qtdoc                       # No need documentation
+                  -skip qtfeedback                  # New to Qt6
                   -skip qtgamepad                   # No need gamepad hardware support.
                   -skip qtgraphicaleffects          # No need Advanced graphical effects in GUI
+                  -skip qtlanguageserver            # New to Qt6
                   -skip qtlocation                  # No need geolocation
                   -skip qtlottie                    # No need Adobe QtQuick After Effect animations integration
-                  -skip qtmacextras                 # For MacOS devices only
+                  -skip qtmqtt                      # New to Qt6
                   -skip qtmultimedia                # No need multimedia support (replaced by QtAV+ffmpeg)
                   -skip qtnetworkauth               # No need network authentication support.
+                  -skip qtopcua                     # New to Qt6
+                  -skip qtpim                       # New to Qt6
+                  -skip qtpositioning               # New to Qt6
+                  -skip qtqa                        # New to Qt6
                   -skip qtpurchasing                # No need in-app purchase of products support
-                  -skip qtquickcontrols2            # QtQuick support for QML
+                  -skip qtquick3d                   # New to Qt6
+                  -skip qtquicktimeline             # New to Qt6
                   -skip qtremoteobjects             # No need sharing QObject properties between processes support
-                  -skip qtscript                    # No need scripting (deprecated)
+                  -skip qtrepotools                 # New to Qt6
                   -skip qtscxml                     # No need SCXML state machines support
                   -skip qtsensors                   # For embedded devices only
                   -skip qtserialbus                 # No need serial bus support
                   -skip qtserialport                # No need serial port support
+                  -skip qtshadertools               # New to Qt6
                   -skip qtspeech                    # No need speech synthesis support
+                  -skip qtsystems                   # New to Qt6
+                  -skip qttools                     # New to Qt6
                   -skip qtvirtualkeyboard           # No need virtual keyboard support
                   -skip qtwebglplugin               # No need browser OpenGL extension support
                   -skip qtwebsockets                # No need websocket support
                   -skip qtwebview                   # QML extension for QWebEngine
-                  -skip qtwinextras                 # For Windows devices only
-                  -skip qtcanvas3d                  # New to Qt6
-                  -skip qtdocgallery                # New to Qt6
-                  -skip qtfeedback                  # New to Qt6
-                  -skip qtpim                       # New to Qt6
-                  -skip qtqa                        # New to Qt6
-                  -skip qtrepotools                 # New to Qt6
-                  -skip qtsystems                   # New to Qt6
 
                   ${DROP_QTWEBENGINE_DEPS}
 
