--- a/project/bundles/3rdparty/ext_qt/6.3/CMakeLists.txt
+++ b/project/bundles/3rdparty/ext_qt/6.3/CMakeLists.txt
@@ -16,10 +16,6 @@ IF(NOT ENABLE_QTWEBENGINE)
         )
 ENDIF()
 
-execute_process(COMMAND
-                ${CMAKE_CURRENT_SOURCE_DIR}/kde-qt6.sh ${EXTERNALS_DOWNLOAD_DIR}
-)
-
 ExternalProject_Add(ext_qt
 
     URL file://${EXTERNALS_DOWNLOAD_DIR}/kde-qt6.tar
@@ -104,4 +100,10 @@ ExternalProject_Add(ext_qt
     UPDATE_COMMAND ""
     BUILD_IN_SOURCE 1
     ALWAYS 0
+)
+
+ExternalProject_Add_step(ext_qt before_download
+
+    COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/kde-qt6.sh ${EXTERNALS_DOWNLOAD_DIR}
+    DEPENDERS download
 )
