--- a/project/bundles/3rdparty/ext_exiv2/CMakeLists.txt
+++ b/project/bundles/3rdparty/ext_exiv2/CMakeLists.txt
@@ -53,7 +53,9 @@ if(MINGW)
 #        GIT_TAG v0.27.5
         GIT_TAG 0.27-maintenance
 
-        CONFIGURE_COMMAND cp -f ${CMAKE_CURRENT_SOURCE_DIR}/../../../../bootstrap.mxe <SOURCE_DIR>/. &&
+        CONFIGURE_COMMAND cp -f ${CMAKE_CURRENT_SOURCE_DIR}/../../../scripts/create_manifest.sh <SOURCE_DIR>/. &&
+                          <SOURCE_DIR>/create_manifest.sh ${EXTERNALS_DOWNLOAD_DIR} exiv2 &&
+                          cp -f ${CMAKE_CURRENT_SOURCE_DIR}/../../../../bootstrap.mxe <SOURCE_DIR>/. &&
                           <SOURCE_DIR>/bootstrap.mxe ${MXE_BUILDROOT} RelWithDebInfo ${BASH_OPTIONS}
 
         BUILD_COMMAND cd <SOURCE_DIR>/build.mxe && $(MAKE) -j
@@ -80,7 +82,9 @@ elseif(APPLE)
 #        GIT_TAG v0.27.5
         GIT_TAG 0.27-maintenance
 
-        CONFIGURE_COMMAND cp -f ${CMAKE_CURRENT_SOURCE_DIR}/../../../../bootstrap.macports <SOURCE_DIR>/. &&
+        CONFIGURE_COMMAND cp -f ${CMAKE_CURRENT_SOURCE_DIR}/../../../scripts/create_manifest.sh <SOURCE_DIR>/. &&
+                          <SOURCE_DIR>/create_manifest.sh ${EXTERNALS_DOWNLOAD_DIR} exiv2 &&
+                          cp -f ${CMAKE_CURRENT_SOURCE_DIR}/../../../../bootstrap.macports <SOURCE_DIR>/. &&
                           <SOURCE_DIR>/bootstrap.macports ${PREFIX_ext_exiv2} RelWithDebInfo x86_64 ${BASH_OPTIONS}
 
         BUILD_COMMAND cd <SOURCE_DIR>/build && $(MAKE)
@@ -104,12 +108,14 @@ else() # Linux
 #        GIT_TAG v0.27.5
         GIT_TAG 0.27-maintenance
 
-        CONFIGURE_COMMAND cd <SOURCE_DIR> &&
-                   $(CMAKE_COMMAND) . -DCMAKE_INSTALL_PREFIX=${PREFIX_ext_exiv2}
-                   -DCMAKE_BUILD_TYPE=${GLOBAL_BUILD_TYPE}
-                   -DICONV_INCLUDE_DIR=${PREFIX_ext_exiv2}/include
-                   ${Exiv2_Conf}
-                   ${GLOBAL_PROFILE}
+        CONFIGURE_COMMAND cp -f ${CMAKE_CURRENT_SOURCE_DIR}/../../../scripts/create_manifest.sh <SOURCE_DIR>/. &&
+                          <SOURCE_DIR>/create_manifest.sh ${EXTERNALS_DOWNLOAD_DIR} exiv2 &&
+                          cd <SOURCE_DIR> &&
+                          $(CMAKE_COMMAND) . -DCMAKE_INSTALL_PREFIX=${PREFIX_ext_exiv2}
+                                             -DCMAKE_BUILD_TYPE=${GLOBAL_BUILD_TYPE}
+                                             -DICONV_INCLUDE_DIR=${PREFIX_ext_exiv2}/include
+                                             ${Exiv2_Conf}
+                                             ${GLOBAL_PROFILE}
 
         BUILD_COMMAND cd <SOURCE_DIR> && $(MAKE)
 
