--- a/project/bundles/3rdparty/ext_qt/6.3/CMakeLists.txt
+++ b/project/bundles/3rdparty/ext_qt/6.3/CMakeLists.txt
@@ -22,6 +22,7 @@ ExternalProject_Add(ext_qt
     URL file://${EXTERNALS_DOWNLOAD_DIR}/kde-qt6.tar
 
     PATCH_COMMAND ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/qt-appimage-support.patch &&
+                  ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/qt-appimage-openssl-linked.patch &&
                   ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/qt-base-cmake.patch
 
     CONFIGURE_COMMAND cp ${CMAKE_CURRENT_SOURCE_DIR}/bootstrap-qt6.sh <SOURCE_DIR>/. &&
