Add note about openssl linking failure and patch to solve the problem.

--- a/project/bundles/3rdparty/ext_qt/6.3/CMakeLists.txt
+++ b/project/bundles/3rdparty/ext_qt/6.3/CMakeLists.txt
@@ -17,6 +17,8 @@ IF(NOT ENABLE_QTWEBENGINE)
         )
 ENDIF()
 
+# NOTE: even if OpenSSL libs paths are passed in bootstrap-qt6.sh, an hardcoded patch is necessary else linking fail.
+
 ExternalProject_Add(ext_qt
 
     URL file://${EXTERNALS_DOWNLOAD_DIR}/kde-qt6.tar
